# melon-back-end

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  melon_back_end.py  pyproject.toml  readme.md  requirements.txt  test_file.py
back_end/: main.py  melon_back_end.py  utils.py
back_end/api/api_v1/: router.py
back_end/api/api_v1/handlers/: chat.py  folder.py  friends.py  message.py  user.py
back_end/api/auth/: jwt.py
back_end/core/: config.py  logger.py  security.py
back_end/models/: chat_model.py  folder_model.py  message_model.py  user_model.py
back_end/schemas/: auth_schema.py  chat_schema.py  folder_schemes.py  friend_responses.py  generic_response_schema.py  message_schema.py  user_schema.py
back_end/services/: chat_service.py  folder_service.py  friend_services.py  message_service.py  user_service.py
