[tool.poetry]
name = "melon-back-end"
version = "0.1.0"
description = ""
authors = [
    "Соколов Артём Викторович <tumakaelfufaka@gmail.com>",
    "Собин Григорий Олегович <russian4ever13@gmail.com>"
]
readme = "readme.md"
packages = [{include = "melon_back_end"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.0.253"
fastapi = "^0.92.0"
websocket = "^0.2.1"
pytest = "^7.2.1"
requests = "^2.28.2"
sqlalchemy = "^2.0.4"
pre-commit = "^3.1.1"
uvicorn = "^0.20.0"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
